--- a/style.css
+++ b/style.css
@@ -3,3 +3,35 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 {
+  text-align: center;
+}
+nav {
+  text-align: center;
+}
+nav a {
+  padding-left: 10px;
+  padding-right: 10px;
+  color: grey;
+}
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+figcaption {
+  text-align: center;
+  font-size: 14px;
+}
+#featured-property p {
+  text-align: center;
+  width: 800px;
+  margin: 0 auto;
+  padding-top: 10px;
+}
+#details div {
+  float: left;
+  width: 379px;
+  text-align: center;
+  background-color: red;
+}
